[gd_scene load_steps=2 format=3 uid="uid://d2ge8nslcgcm6"]

[ext_resource type="Script" path="res://UI/Secret/VisualScripting/Scripts/visual_scripting_holder.gd" id="1_tfdrk"]

[node name="VisualScriptingHolder" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tfdrk")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ScriptList" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddScript" type="Button" parent="ScrollContainer/MarginContainer/ScriptList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Add Script"
flat = true

[connection signal="pressed" from="ScrollContainer/MarginContainer/ScriptList/AddScript" to="." method="_on_add_script_pressed"]
